log
Fri 10 Mar 2023 12:19:00 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6a86112
Fri 17 Mar 2023 05:52:19 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|5
total_score: 20/70
a3b2c2b
Fri 17 Mar 2023 05:54:06 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
ce1aa40
Fri 17 Mar 2023 06:01:27 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:14: error: redefinition of ‘p’
   58 |    Persona * p = (Persona *) malloc(sizeof(Persona));
      |              ^
exercises.c:57:13: note: previous definition of ‘p’ with type ‘Persona *’
   57 |   Persona * p = NULL;
      |             ^
Compilation failed
ab4f67a
Fri 17 Mar 2023 06:01:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:12: error: conflicting types for ‘p’; have ‘Persona’
   58 |    Persona p = (Persona *) malloc(sizeof(Persona));
      |            ^
exercises.c:57:13: note: previous definition of ‘p’ with type ‘Persona *’
   57 |   Persona * p = NULL;
      |             ^
exercises.c:58:16: error: invalid initializer
   58 |    Persona p = (Persona *) malloc(sizeof(Persona));
      |                ^
exercises.c:59:11: error: invalid type argument of ‘->’ (have ‘Persona’)
   59 |   strcpy(p->nombre,nombre);
      |           ^~
exercises.c:60:11: error: invalid type argument of ‘->’ (have ‘Persona’)
   60 |   strcpy(p->rut,rut);
      |           ^~
exercises.c:61:4: error: invalid type argument of ‘->’ (have ‘Persona’)
   61 |   p->edad = edad;
      |    ^~
exercises.c:63:11: error: incompatible types when returning type ‘Persona’ but ‘Persona *’ was expected
   63 |    return p;
      |           ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0bf47c2
Fri 17 Mar 2023 06:02:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
5633749
Fri 17 Mar 2023 06:11:20 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:80:33: error: expected expression before ‘)’ token
   80 |   vectorcreado = (vectorcreado *) malloc(sizeof(vector));
      |                                 ^
exercises.c:82:15: error: ‘Vector’ has no member named ‘largo’
   82 |   vectorcreado-> largo = n;
      |               ^~
Compilation failed
8bb1cc9
